[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://character_sprites/idle.png" type="Texture" id=2]
[ext_resource path="res://character_sprites/walk_right_1.png" type="Texture" id=3]
[ext_resource path="res://character_sprites/walk_right_2.png" type="Texture" id=4]
[ext_resource path="res://character_sprites/walk_right_3.png" type="Texture" id=5]
[ext_resource path="res://character_sprites/walk_right_4.png" type="Texture" id=6]
[ext_resource path="res://character_sprites/walk_right_5.png" type="Texture" id=7]
[ext_resource path="res://character_sprites/walk_left_1.png" type="Texture" id=8]
[ext_resource path="res://character_sprites/walk_left_2.png" type="Texture" id=9]
[ext_resource path="res://character_sprites/walk_left_3.png" type="Texture" id=10]
[ext_resource path="res://character_sprites/walk_left_4.png" type="Texture" id=11]
[ext_resource path="res://character_sprites/walk_left_5.png" type="Texture" id=12]
[ext_resource path="res://ui/exclamation_mark_1.png" type="Texture" id=13]
[ext_resource path="res://ui/exclamation_mark_2.png" type="Texture" id=14]
[ext_resource path="res://ui/exclamation_mark_3.png" type="Texture" id=15]
[ext_resource path="res://ui/exclamation_mark_4.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "trigger",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="exclamation_box" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -22 )
frames = SubResource( 4 )
animation = "trigger"
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
